# create-repository-BIStanev24

./: .gitignore  README.md
Titanic/: CMakeLists.txt
Titanic/include/: data.h  logic.h  ui.h
Titanic/src/: data.cpp  logic.cpp  main.cpp  ui.cpp
